# spla

./: .clang-format  .gitignore  .gitmodules  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCIES.md  DEVELOPMENT.md  Doxyfile  EXAMPLES.md  LICENSE  LICENSE.md  README.md  SplaAdd_8hpp.html  SplaAdd_8hpp__dep__incl.map  SplaAdd_8hpp__dep__incl.md5  SplaAdd_8hpp__incl.map  SplaAdd_8hpp__incl.md5  SplaAdd_8hpp_source.html  SplaAlgoBfs_8cpp.html  SplaAlgoBfs_8cpp__incl.map  SplaAlgoBfs_8cpp__incl.md5  SplaAlgoBfs_8hpp.html  SplaAlgoBfs_8hpp__dep__incl.map  SplaAlgoBfs_8hpp__dep__incl.md5  SplaAlgoBfs_8hpp__incl.map  SplaAlgoBfs_8hpp__incl.md5  SplaAlgoBfs_8hpp_source.html  SplaAlgoCommon_8cpp.html  SplaAlgoCommon_8cpp__incl.map  SplaAlgoCommon_8cpp__incl.md5  SplaAlgoCommon_8hpp.html  SplaAlgoCommon_8hpp__dep__incl.map  SplaAlgoCommon_8hpp__dep__incl.md5  SplaAlgoCommon_8hpp__incl.map  SplaAlgoCommon_8hpp__incl.md5  SplaAlgoCommon_8hpp_source.html  SplaAlgoSssp_8cpp.html  (+1703 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_task.md
.github/PULL_REQUEST_TEMPLATE/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/workflows/: build.yml  clang-format.yml  deploy-test.yml  deploy.yml  docs-cpp.yml  docs-python.yml  docs.yml  test.yml
docs-cpp/: README_8md.html  accelerator_8hpp.html  accelerator_8hpp__dep__incl.map  accelerator_8hpp__dep__incl.md5  accelerator_8hpp__incl.map  accelerator_8hpp__incl.md5  accelerator_8hpp_source.html  algorithm_8cpp.html  algorithm_8cpp__incl.map  algorithm_8cpp__incl.md5  algorithm_8hpp.html  algorithm_8hpp__dep__incl.map  algorithm_8hpp__dep__incl.md5  algorithm_8hpp__incl.map  algorithm_8hpp__incl.md5  algorithm_8hpp_source.html  annotated.html  array_8cpp.html  array_8cpp__incl.map  array_8cpp__incl.md5  array_8hpp.html  array_8hpp__dep__incl.map  array_8hpp__dep__incl.md5  array_8hpp__incl.map  array_8hpp__incl.md5  array_8hpp_source.html  auto__common_8hpp.html  auto__common_8hpp_source.html  auto__common__api_8hpp.html  auto__common__api_8hpp__dep__incl.map  auto__common__api_8hpp__dep__incl.md5  auto__common__api_8hpp_source.html  auto__common__def_8hpp.html  auto__common__def_8hpp_source.html  auto__common__func_8hpp.html  auto__common__func_8hpp_source.html  auto__common__incl_8hpp.html  auto__common__incl_8hpp_source.html  auto__count_8hpp.html  auto__count_8hpp__dep__incl.map  (+1769 more)
docs-cpp/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  (+87 more)
docs-python/: index.html  pyspla.html  search.js
docs-python/pyspla/: array.html  bridge.html  index.html  library.html  matrix.html  memview.html  object.html  op.html  scalar.html  schedule.html  type.html  vector.html  version.html
docs-python/spla/: bridge.html  index.html  library.html  matrix.html  op.html  schedule.html  type.html  vector.html  version.html
examples/: bfs.cpp  common.hpp  convert.cpp  options.hpp  pi.cpp  pr.cpp  spla_bfs.cpp  spla_data.cpp  spla_sssp.cpp  spla_tc.cpp  sssp.cpp  tc.cpp
ide/: CLionHeader.h
include/: CMakeLists.txt  spla.h  spla.hpp
include/spla-algo/: SplaAlgo.hpp  SplaAlgoBfs.hpp  SplaAlgoCommon.hpp  SplaAlgoSssp.hpp  SplaAlgoTc.hpp
include/spla-cpp/: Spla.hpp  SplaConfig.hpp  SplaData.hpp  SplaDecorated.hpp  SplaDescriptor.hpp  SplaExpression.hpp  SplaExpressionNode.hpp  SplaFunctionBinary.hpp  SplaLibrary.hpp  (+11 more)
python/: LICENSE.md  MANIFEST.in  README.md  example.py  setup.py
scripts/: run_tests.py  shared.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  (+92 more)
sources/: CMakeLists.txt  SplaAlgoBfs.cpp  SplaAlgoCommon.cpp  SplaAlgoSssp.cpp  SplaAlgoTc.cpp  SplaData.cpp  SplaDecorated.cpp  SplaDescriptor.cpp  SplaExpression.cpp  SplaExpressionNode.cpp  SplaFunctionBinary.cpp  SplaFunctionSelect.cpp  SplaFunctionUnary.cpp  SplaFunctions.cpp  SplaLibrary.cpp  SplaMatrix.cpp  SplaObject.cpp  SplaRefCnt.cpp  SplaScalar.cpp  SplaType.cpp  SplaTypes.cpp  SplaVector.cpp
spla/: backend.hpp  binary_op.hpp  config.hpp  descriptor.hpp  expression.hpp  expression_node.hpp  expression_submission.hpp  library.hpp  matrix.hpp  spla.hpp  types.hpp  vector.hpp
src/: algorithm.cpp  array.cpp  descriptor.cpp  exec.cpp  io.cpp  library.cpp  matrix.cpp  memview.cpp  op.cpp  scalar.cpp  schedule.cpp  timer.cpp  type.cpp  vector.cpp
tests/: CMakeLists.txt  TestAlgoBfs.cpp  TestAlgoSssp.cpp  TestAlgoTc.cpp  TestBasic.cpp  TestCompute.cpp  TestDataMatrix.cpp  TestDataScalar.cpp  TestDataVector.cpp  TestExpression.cpp  TestIndicesToRowOffsets.cpp  TestLoadMatrix.cpp  TestMaskByKey.cpp  TestMatrixEWiseAdd.cpp  TestMatrixReduceScalar.cpp  TestMergeByKey.cpp  TestMxM.cpp  TestReduce.cpp  TestReduceByKey.cpp  TestReduceDuplicates.cpp  TestReduceScalar.cpp  TestScalarEWiseAdd.cpp  TestStableSortByColumn.cpp  TestTranspose.cpp  TestTria.cpp  TestTril.cpp  TestTriu.cpp  TestVectorAssign.cpp  TestVectorEWiseAdd.cpp  TestVectorReduce.cpp  TestVectorToDense.cpp  TestVxM.cpp  Testing.hpp  test_algo_bfs.cpp  test_array.cpp  test_binary_op.cpp  test_common.hpp  test_kron.cpp  test_library.cpp  test_matrix.cpp  (+14 more)
tests/utils/: Compute.hpp  Matrix.hpp  Operations.hpp  Random.hpp  Setup.hpp  Typetraits.hpp  Values.hpp  Vector.hpp  matrix.hpp  operation.hpp  random.hpp  vector.hpp
(+409 files in other folders)
