function(spla_test_target target)
    message(STATUS "Add test ${target}")
    add_executable(${target} ${target}.cpp)
    target_link_libraries(${target} PRIVATE spla)
    target_link_libraries(${target} PRIVATE gtest)
    target_include_directories(${target} PRIVATE ${CMAKE_CURRENT_LIST_DIR})
    target_include_directories(${target} PRIVATE ../sources)
endfunction()

spla_test_target(TestAlgoBfs)
spla_test_target(TestAlgoSssp)
spla_test_target(TestAlgoTc)
spla_test_target(TestDataMatrix)
spla_test_target(TestDataScalar)
spla_test_target(TestDataVector)
spla_test_target(TestIndicesToRowOffsets)
spla_test_target(TestMatrixEWiseAdd)
spla_test_target(TestMaskByKey)
spla_test_target(TestMergeByKey)
spla_test_target(TestMxM)
spla_test_target(TestReduceByKey)
spla_test_target(TestReduceDuplicates)
spla_test_target(TestTranspose)
spla_test_target(TestVectorAssign)
spla_test_target(TestVectorEWiseAdd)
spla_test_target(TestVxM)
spla_test_target(TestVectorReduce)
spla_test_target(TestReduce)
spla_test_target(TestMatrixReduceScalar)
spla_test_target(TestScalarEWiseAdd)
spla_test_target(TestLoadMatrix)
spla_test_target(TestStableSortByColumn)
