function(spla_test_target target)
    message(STATUS "Add test ${target}")
    add_executable(${target} ${target}.cpp)
    target_link_libraries(${target} PRIVATE spla)
    target_link_libraries(${target} PRIVATE gtest)
    target_include_directories(${target} PRIVATE ${CMAKE_CURRENT_LIST_DIR})
endfunction()

spla_test_target(test_binary_op)
spla_test_target(test_vector_storage)
