function(spla_test_target target)
    message(STATUS "Add test ${target}")
    add_executable(${target} ${target}.cpp)
    target_link_libraries(${target} PRIVATE spla)
    target_link_libraries(${target} PRIVATE gtest)
    target_include_directories(${target} PRIVATE ${CMAKE_CURRENT_LIST_DIR})
endfunction()

spla_test_target(test_library)
spla_test_target(test_matrix)
spla_test_target(test_mxv)
spla_test_target(test_vxm)
spla_test_target(test_op)
spla_test_target(test_opencl)
spla_test_target(test_schedule)
spla_test_target(test_vector)
